--- a/vue_project_api/vue_api/src/assets/main.css
+++ b/vue_project_api/vue_api/src/assets/main.css
@@ -1,9 +1,9 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  width: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   font-weight: normal;
 }
 
@@ -28,8 +28,10 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
     padding: 0 2rem;
   }
 }
